2010-03-02  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php:
	- Start moving notation data into class.

2010-03-02  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php, scorerender.php:
	- Clean up variable names and debugging.
	* scorerender.php (get_notation_name):
	- Don't need to lowercase class name anymore on PHP5.

2010-03-02  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- (set_midi_program) New func.
	* wp-scorerender.php, scorerender-admin.php:
	- Add PRODUCE_MIDI setting and checkbox.
	* wp-scorerender.php:
	- (scorerender_shortcode_handler) Only call set_programs() for image
	  rendering programs.
	- (scorerender_parse_shortcode) Don't disable certain notation if
	  midi program is missing.
	* notation/{abc,lilypond,mup,pmw}.php:
	- (is_notation_usable, define_setting_value) Make them
	  more generic, allows possibility to unify them.
	* notation/abc.php:
	- (generate_midi) New func.
	- Adds ABC2MIDI_BIN setting for midi support.

2010-03-02  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- All class constants and get_error_msg() removed.
	- (render) Returns WP_Error on error.
	* wp-scorerender.php:
	- (scorerender_return_fragment_error, scorerender_shortcode_handler)
	  Adopt the change.

2010-03-01  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php, scorerender-admin.php:
	- ImageMagick minimum requirement is 6.3.5-7, not 6.3.6-2 as
	  documented before (option was wrong too, should be -alpha)
	* notation/mup.php, notation/pmw.php:
	- Properly get around a bug fixed in 6.3.9-6 that affects
	  alpha channel in paletted images.

2010-03-01  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php, notation/*.php:
	- (is_notation_usable, is_prog_usable) Allows calling as both a
	  static method and from instantiated class object, so that they
	  can be used both during admin page checking and rendering.
	- (render) Also check for bad notation program.
	* notation/lilypond.php: